Fixed étape 1